# GuIritDllPaintOnSrf

./: GuIritDllExample.cpp  GuIritDllExample.def  GuIritDllPaintOnSrf.cpp  Guirit.cfg.Win  Makefile.am  OglRendererBase.h  README.md  install_guirit.py  install_irit.py  makefile.unx  makefile.wnt  readme.txt  reference.cpp  sphere.itd
BasicModels/: bibi.itd  cross.itd  cube.itd  glass.itd  monkey3.itd  pawn.itd  relou.itd  slide.itd  sphere_texture.itd  testbench.itd  trimed.itd  truc.itd  truebibi.itd  yyy.itd
Example/Masks/: Masks.pptx
Icons/: IconExample.xpm  IconMenuExample.xpm  IconPaintOnSrf.xpm
OtherModels/: KnotVas1.itd  cup2.itd  m1teapot.itd  m2teapot.itd  mdl_sld2.itd  mdl_sld6.itd
